--- a/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
+++ b/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
@@ -11,11 +11,14 @@
 
 {% block page_primary_action %}
   {% if h.check_access('group_create') %}
-    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='save' %}
+    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', id="blah", class_='btn btn-primary', icon='save' %}
+  <button type="button" id="show-json" >Click Me!</button>
   {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
+<div id="dialog-div">
+</div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
@@ -26,7 +29,8 @@
 <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
-<!--<div>&nbsp;</div>-->
+<script>
+</script>
 <div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
 {% endblock %}
 
