--- a/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
+++ b/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
@@ -13,7 +13,7 @@
   {% if h.check_access('group_create') %}
     {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', id="blah", class_='btn btn-primary', icon='save' %}
   <button type="button" id="show-wf" >Show workflow!</button>
-  <button type="button" id="load-wf" >Load workflow!</button>
+  <!--<button type="button" id="load-wf" >Load workflow!</button>-->
   {% endif %}
 {% endblock %}
 
@@ -22,11 +22,13 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
 <script type="text/javascript" src="https://rawgit.com/bdparrish/cytoscape.js-toolbar/master/cytoscape-toolbar.js"></script>
 <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
 <link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
 <link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
@@ -39,7 +41,7 @@
         wf = {{ workflow|safe }};
         //alert(JSON.stringify(wf));
         //alert(JSON.stringify(wf['elements']));
-        drawGraph(wf['elements']);
+        drawGraph(wf);
     });
 </script>
 {% endblock %}
