Added initial example wf property editor box.

--- a/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
+++ b/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
@@ -47,5 +47,6 @@
 {% endblock %}
 
 {% block secondary_content %}
+{% snippet "workflow/snippets/workflow-element-editor.html" %}
 {% snippet "workflow/snippets/workflow-helper.html" %}
 {% endblock %}
