Added workflow actions edit, show, new depending on which wf is editable or not.

--- a/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
+++ b/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
@@ -41,7 +41,7 @@
         wf = {{ workflow|safe }};
         //alert(JSON.stringify(wf));
         //alert(JSON.stringify(wf['elements']));
-        drawGraph(wf);
+        drawGraph(wf,'edit');
     });
 </script>
 {% endblock %}
