--- a/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
+++ b/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
@@ -10,11 +10,9 @@
 
 
 {% block page_primary_action %}
-  {% if h.check_access('group_create') %}
-    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', id="blah", class_='btn btn-primary', icon='save' %}
+  {# if h.check_access('group_create') #}
   <button type="button" id="show-wf" >Show workflow!</button>
-  <!--<button type="button" id="load-wf" >Load workflow!</button>-->
-  {% endif %}
+  {# endif #}
 {% endblock %}
 
 {% block primary_content_inner %}
@@ -47,6 +45,6 @@
 {% endblock %}
 
 {% block secondary_content %}
-{% snippet "workflow/snippets/workflow-element-editor.html" %}
-{% snippet "workflow/snippets/workflow-helper.html" %}
+{% snippet "workflow/snippets/workflow-property-editor.html" %}
+{% snippet "workflow/snippets/workflow-creation-guide.html" %}
 {% endblock %}
