--- a/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
+++ b/ckanext/tess/templates/workflow/structural-bioinformatics-wf.html
@@ -3,7 +3,8 @@
 {% block subtitle %}{{ _('Workflows') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Workflows'), controller='group', action='index' %}</li>
+<li>{% link_for _('Workflows'), controller='ckanext.tess.workflow:WorkflowController', action='index' %}</li>
+<li class="active"><a href="structural-bioinformatics-wf.html">Structural bioinformatics workflow</a></li>
 {% endblock %}
 
 {% block page_header %}{% endblock %}
